--- a/references_knapp.bib
+++ b/references_knapp.bib
@@ -114,13 +114,15 @@
 	pages = {20382--20387},
 }
 
-@article{byrne2023,
+@article{byrne2024,
 	title = {Revisiting conservation units for the endangered mountain yellow-legged frog species complex (\textit{{Rana} muscosa}, \textit{{Rana} sierrae}) using multiple genomic methods},
 	url = {https://doi.org/10.1007/s10592-023-01568-5},
 	doi = {10.1007/s10592-023-01568-5},
 	journal = {Conservation Genetics},
 	author = {Byrne, Allison Q. and Rothstein, Andrew P. and Smith, Lydia L. and Kania, Hannah and Knapp, Roland A. and Boiano, Daniel M. and Briggs, Cheryl J. and Backlin, Adam R. and Fisher, Robert N. and Rosenblum, Erica Bree},
-	year = {2023},
+	year = {2024},
+  volume = {25},
+  pages = {591--606}
 }
 
 @article{davidson2007,
@@ -583,17 +585,6 @@
 	pages = {9436},
 }
 
-@article{lapp2024,
-  title = {Aquatic soundscape recordings reveal diverse vocalizations and nocturnal activity of an endangered frog},
-  volumne = {},
-  url = {https://doi.org/10.1086/729422},
-  doi = {10.1086/729422},
-  journal = {The American Naturalist},  
-  author = {Lapp, Sam and Smith, Thomas C and Knapp, Roland A and Lindauer, Alexa and Kitzes, Justin},
-  year = {2024},
-  pages = {In press},
-}
-
 @article{kramer2008,
 	title = {Allee effect limits colonization success of sexually reproducing zooplankton},
 	volume = {89},
@@ -604,6 +595,18 @@
 	author = {Kramer, Andrew M and Sarnelle, Orlando and Knapp, Roland A},
 	year = {2008},
 	pages = {2760--2769},
+}
+
+@article{lapp2024,
+  title = {Aquatic soundscape recordings reveal diverse vocalizations and nocturnal activity of an endangered frog},
+  volumne = {203},
+  issue = {5},
+  url = {https://doi.org/10.1086/729422},
+  doi = {10.1086/729422},
+  journal = {The American Naturalist},  
+  author = {Lapp, Sam and Smith, Thomas C and Knapp, Roland A and Lindauer, Alexa and Kitzes, Justin},
+  year = {2024},
+  pages = {618--621},
 }
 
 @article{latta2007,
