--- a/cv.qmd
+++ b/cv.qmd
@@ -79,10 +79,12 @@ roland.knapp@ucsb.edu | \href{https://mountainlakesresearch.com}{mountainlakesre
   \end{flushright}\end{minipage}
 \end{itemize}
 
-### RECENT MEDIA
+### RECENT MEDIA (selected)
 
 \vspace{3pt}
 \hrule
+
+-   BBC Wildlife Magazine, 21 November 2024. [A long-lost sound has returned to the great mountains of Yosemite National Park](https://www.discoverwildlife.com/animal-facts/amphibians/yellow-legged-frog-yosemite)
 
 -   USA Today, 16 November 2024. ['The lakes are alive again': These frogs are back from near extinction](https://www.usatoday.com/story/news/nation/2024/11/16/frog-species-brought-back-yosemite-national-park/76331174007/)
 
@@ -125,7 +127,7 @@ roland.knapp@ucsb.edu | \href{https://mountainlakesresearch.com}{mountainlakesre
 
 **Reviewer**:
 
--   *Journals*: American Naturalist, Amphibia-Reptilia, Animal Behaviour, Animal Conservation, Behavioral Ecology, Biological Conservation, Bulletin of Marine Science, Canadian Journal of Fisheries and Aquatic Sciences, Conservation Biology, Conservation Physiology, Copeia, Diseases of Aquatic Organisms, Diversity and Distributions, Ecography, EcoHealth, Ecological Applications, Ecological Monographs, Ecology, Ecology and Evolution, Ecology Letters, Ecosphere, Ecosystems, Environmental Biology of Fishes, Freshwater Biology, Herpetological Conservation and Biology, Herpetologica, Herpetological Conservation and Biology, Herpetological Review, Journal of Animal Ecology, Journal of Applied Ecology, Journal of Fish Biology, Journal of Herpetology, Journal of Zoology, Limnology and Oceanography, North American Journal of Fisheries Management, New Zealand Journal of Marine and Freshwater Research, Oecologia, PeerJ, PLOS One, Science, Science of the Total Environment, Scientific Report, Transactions of the American Fisheries Society.
+-   *Journals*: American Naturalist, Amphibia-Reptilia, Animal Behaviour, Animal Conservation, Behavioral Ecology, Biological Conservation, Bulletin of Marine Science, Canadian Journal of Fisheries and Aquatic Sciences, Conservation Biology, Conservation Physiology, Copeia, Diseases of Aquatic Organisms, Diversity and Distributions, Ecography, EcoHealth, Ecological Applications, Ecological Monographs, Ecology, Ecology and Evolution, Ecology Letters, Ecosphere, Ecosystems, Environmental Biology of Fishes, Freshwater Biology, Herpetological Conservation and Biology, Herpetologica, Herpetological Review, Journal of Animal Ecology, Journal of Applied Ecology, Journal of Fish Biology, Journal of Herpetology, Journal of Zoology, Limnology and Oceanography, North American Journal of Fisheries Management, New Zealand Journal of Marine and Freshwater Research, Oecologia, PeerJ, PLOS One, Science, Science of the Total Environment, Scientific Reports, Transactions of the American Fisheries Society.
 
 -   *National Science Foundation*: Grant proposals to the Division of Environmental Biology and Division of Integrative Organismal Systems.
 
@@ -158,7 +160,8 @@ roland.knapp@ucsb.edu | \href{https://mountainlakesresearch.com}{mountainlakesre
 -   UCSB *Ecology and Management of California's Wildlands*: 2005, 2006, 2008, 2010, 2011
 -   UCSB *Introduction to Environmental Studies*: 2014, 2016, 2023
 -   UCSB *Aquatic Ecology Seminar*: 2023, 2024
--   UCSB *Vertebrate Zoology*: 2023, 2024
+-   UCSB *Ecology and Evolution of Terrestrial Vertebrates*: 2023, 2024
+-   UCSB *Field-based Undergraduate Engagement through Research, Teaching, and Education*: 2024 
 -   University of Redlands *Environmental Chemistry Field Experience*: 2013
 -   Bay School of San Francisco *Water in the West*: 2019, 2022, 2023, 2024
 
