Add new publication

--- a/references_knapp.bib
+++ b/references_knapp.bib
@@ -787,6 +787,19 @@
 	pages = {308--321},
 }
 
+@article{schrock2025,
+  title = {Do fungi look like macroparasites? Quantifying the patterns and mechanisms of aggregation for host–fungal parasite relationships},
+  volume = {292},
+  number = {2043},
+  doi = {10.1098/rspb.2024.2013},
+  journal = {Proceedings of the Royal Society B: Biological Sciences},
+  author = {Schrock, Sarah A. R.  and Walsman, Jason C.  and DeMarchi, Joseph  and LeSage, Emily H.  and Ohmer, Michel E. B.  and Rollins-Smith, Louise A.  and Briggs, Cheryl J.  and Richards-Zawacki, Corinne L.  and Woodhams, Douglas C.  and Knapp, Roland A.  and Smith, Thomas C.  and Haddad, Célio F. B.  and Becker, C. Guilherme  and Johnson, Pieter T. J.  and Wilber, Mark Q. },
+  year = {2025},
+  pages = {20242013},
+}
+
+URL = {https://royalsocietypublishing.org/doi/abs/10.1098/rspb.2024.2013}
+
 @article{smith2016,
 	title = {Declines and extinctions of mountain yellow-legged frogs have small effects on benthic macroinvertebrate communities},
 	volume = {7},
