Add media story from Longreads

--- a/cv.qmd
+++ b/cv.qmd
@@ -84,6 +84,8 @@ roland.knapp@ucsb.edu | \href{https://mountainlakesresearch.com}{mountainlakesre
 \vspace{3pt}
 \hrule
 
+-   Longreads, 29 May 2025. [The fish that climbed a mountain](https://longreads.com/2025/05/29/fishing-national-park-wildlife-recreation/)
+
 -   BBC Wildlife Magazine, 21 November 2024. [A long-lost sound has returned to the great mountains of Yosemite National Park](https://www.discoverwildlife.com/animal-facts/amphibians/yellow-legged-frog-yosemite)
 
 -   USA Today, 16 November 2024. ['The lakes are alive again': These frogs are back from near extinction](https://www.usatoday.com/story/news/nation/2024/11/16/frog-species-brought-back-yosemite-national-park/76331174007/)
